# powergama

./: .gitignore  .pre-commit-config.yaml  2014Europe_results_map.html  CHANGES.md  CHANGES.txt  GridData.py  LpProblem.py  MipDatabase.py  MipProblem.py  MipResults.py  README.md  __init__.py  constants.py  database.py  input_plot.py  powergim.md  pyproject.toml  scenarios.py  version.py
.github/: pull_request_template.md
.github/workflows/: build.yml  publish.yml  release.yml
doc/: code_LpProblem.rst  code_costbenefit.rst  code_database.rst  code_plots.rst  code_sampling.rst  code_scenarios.rst  index.rst  requirements.txt
input_plots/: consumers_map.html  nodes_map.html  powergrid_producers_map.html
powergama/: .gitignore  CHANGES.txt  GridData.py  LpProblem.py  MANIFEST.in  Results.py  __init__.py  licence.txt  scenarios.py  setup.py
powergama/doc/: code_GIS.rst  code_GridData.rst  code_LpProblem.rst  code_Results.rst  code_constants.rst  code_powergim.rst  code_sampling.rst  code_scenarios.rst  conf.py  index.rst  requirements.txt  tutorial.rst
powergama/examples/: example1.py  example_9busmod.py  example_europe2014.py  example_notebook_9bus.ipynb  example_notebook_Europe2014.ipynb  powergama example.ipynb
powergama/examples/data/: 9busmod_branches.csv  9busmod_consumers.csv  9busmod_generators.csv  9busmod_nodes.csv  9busmod_profiles.csv  9busmod_profiles_demand.csv  9busmod_profiles_inflow.csv  9busmod_profiles_storval_filling.csv  9busmod_profiles_storval_time.csv  branches.csv  consumers.csv  generators.csv  nodes.csv  profiles_storval_time.csv  scenario_nordic.csv
powergama/examples/data_europe2014/: 2014_branches.csv  2014_consumers.csv  2014_generators.csv  2014_hvdc.csv  2014_nodes.csv  Scenario Log.xlsx  profiles_storval_filling.csv  profiles_storval_time.csv
powergama/examples/powergim_doggerbank/: det_doggerbank.py  powergim_doggerbank.ipynb  powergim_doggerbank_stochastic.ipynb  sto_doggerbank.py
powergama/examples/powergim_doggerbank/data/: dog_branches.csv  dog_branches_min.csv  dog_consumers.csv  dog_data_irpwind.xml  dog_generators.csv  timeseries_doggerbank.csv  timeseries_sample_100_rnd2016.csv
powergama/powergama/: DayFilter.py  GIS.py  GridData.py  LpProblem.py  LpProblemPulp.py  LpProblemPyomo.py  MipGridData.py  Results.py  SeasonFilter.py  SipGridData.py  SipProblem.py  SipResults.py  __init__.py  constants.py  costbenefit.py  database.py  plots.py  powergim.py  sampling.py  scenarios.py  tests.py  version.py
powergama/powergama/powergim/: __init__.py  cost_analysis.py  file_io.py  investment_model.py  plots.py  powergim.py  utils.py
powergama/userguide/: UserGuide.tex  bibliography_eurosunmed.bib
scripts/: input_plot.py
src/examples/: example_notebook_9bus.ipynb  example_notebook_Europe2014.ipynb
src/examples/data/: 9busmod_consumers.csv  9busmod_nodes.csv
src/examples/data_europe2014/: 2014_branches.csv
src/examples/powergim_doggerbank/: powergim_doggerbank.ipynb  powergim_doggerbank_stochastic.ipynb
src/examples/powergim_doggerbank/data/: dog_branches.csv  dog_consumers.csv  dog_nodes.csv
src/powergama/: GridData.py  LpProblemPyomo.py  PrintFunctions.py  Results.py  __init__.py  database.py  filters.py  plots.py
src/powergama/fault_scenarios/: LpFaultProblem.py  __init__.py  failure_situation.py  full_profiles.py  generate_failure_situations.py  loadshedding_stats.py  specify_storage.py
tests/: conftest.py  example_notebook_9bus.ipynb  example_notebook_Europe2014.ipynb  test_9busmod.py  test_basic.py  test_europe2014.py  test_fault_scenario.py  test_io.py  test_mount_synth.py  test_plots.py  test_scenario_loading.py  test_simulation.py
tests/test_data/data_9bus/: 9busmod_profiles.csv  9busmod_profiles_storval_filling.csv  scenario_empty.csv
tests/test_data/data_europe2014/: 2014_nodes.csv
tests/test_data/mount_synth/: mount_branches.csv  mount_consumers.csv  mount_generators.csv  mount_generators_storage.csv  mount_generators_zero_eff_storage.csv  mount_hvdc.csv  mount_nodes.csv  mount_profiles.csv  mount_storval_filling.csv  mount_storval_time.csv
userguide/: UserGuide.tex  bibliography_eurosunmed.bib  fault_scenario_analysis.md  index.md  input_data.md  model_description.md  output_data_and_analysis.md  scenario_generation.md
