[tool.poetry]
name = "powergama"
version = "1.4.0"
description = "PowerGAMA - Power Grid And Market Analysis tool)"
authors = ["Harald G Svendsen <harald.svendsen@sintef.no>"]
license = "MIT License (http://opensource.org/licenses/MIT)"
readme = "README.md"
homepage = "https://github.com/powergama/powergama"
repository = "https://github.com/powergama/powergama"
classifiers=[
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "^2"
pandas = "^2.2"
pyomo = "^6.8"
scipy = "^1.14"
matplotlib = "^3.9"
branca = ">=0.5"
folium = ">=0.19.4"
cloudpickle = "^3.1"
networkx = "^3.0"
geopandas = "^1.0.1"
highspy = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
mypy = "^1.13"
pylint = "^3.3"
black = "^24.10"
nbmake = "^1.5"
bandit = "^1.8"
flake8 = "^5.0.4"
pre-commit = "^4.0"
coverage = "^7.6.8"

[tool.poetry.extras]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 120
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3

[tool.bandit]
exclude_dirs = ["tests", "__pycache__", ".pytest_cache"]

[tool.coverage.run]
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true